--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
       "target": "ES2020",
       "module": "ES2020",
       "moduleResolution": "node",
-      "strict": true,
+      "strict": false,
       "jsx": "preserve",
       "sourceMap": true,
       "resolveJsonModule": true,
